# grb_orphan_afterglows

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  README.md  do_cover.sh  environment.yml  pylint.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/: DATA.md  Fermi_LAT_GRB_table_21042022.fits  Swift_GRB_Table_04012022.txt  all_dico_015.pkl  all_dico_results_TH_005.pkl  schlafly_dust_factor.csv  sed_Fnu_grb_0.txt
data/jetsimpy/: features_jetsimpy.pkl  features_jetsimpy.txt  jetsimpy_theo_lcs.pkl  jetsimpy_theo_lcs_gaussian.pkl  (+5 more)
docs/: conf.py  index.rst  install.rst  orphans.rst  todo_list.rst
notebooks/: compute_sn_light_curve.ipynb  cuts_elasticc_pseudo_obs.ipynb  elasticc_classifier.ipynb  elasticc_correlations.ipynb  elasticc_photometry.ipynb  explore_simulations_results.ipynb  gaussian_correlations_pseudo_obs.ipynb  generate_GRBs_pop.ipynb  generate_grbs_pop_with_sbat4.ipynb  generate_sGRBs_pseudo_observations.ipynb  grb_orphans_2021.ipynb  light_curves_parameters.ipynb  magnitudes_through_filters.ipynb  number_of_grbs.ipynb  open_and_analyzing_results.ipynb  orphan_pseudo_observations.ipynb  orphans+kn_pseudo_observations.ipynb  pickling_configurations.ipynb  power_law_correlations_pseudo_obs.ipynb  pseudo_observations_fitting_mcmc.ipynb  read_grb_tables.ipynb  short_GRBs_matrices.ipynb  simulations_and_calculating_results.ipynb  simulations_light_curves.ipynb  top_hat_correlations_pseudo_obs.ipynb
orphans/: __init__.py  correlations.py  generate_grb_pop.py  grb_configs.py  grb_interface.py  pickling.py  plotting_lc.py  script_orphans.sh  tools.py  tools_rubin_sim.py
scripts/: Flux_and_redshift.py  agpy_test.py  analysis_005.py  elasticc_compute_features.py  generate_pseudo_obs_jetsimpy.py  orphans_compute_features.py  orphans_fit_mcmc_T0.py  pseudo_obs_005.py  ztf_generate_orphan_pseudo_obs.py
ssd/: .sconsign.dblite  SConstruct  ssd.tex  ssd.xlsx
tests/: test_agpy_sed.py  test_tools.py
(+61 files in other folders)
