[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[project]
name = "orphans"
authors = [{name = "Marina Masson", email = "marina.masson@lpsc.in2p3.fr"}, {name = "Johan Bregeon", email = "bregeon@in2p3.fr"}]
description = "Studying Gamma-ray Bursts orphan afterglow optical light curves"
readme = "README.md"
requires-python = ">=3.11"

license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

classifiers = [
    "Development Status :: 1 - Beta",
    "License :: OSI Approved :: GPL-3.0-or-later",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

dependencies = [
    "afterglowpy",
    "matplotlib",
    "numpy",
    "astropy",
    "scipy",
    "pandas",
    "pyarrow",
    "seaborn",
    "dustmaps",
    "emcee",
    "getdist",
]
version = "v1-rc1"

